# CppQt2026

./: .gitignore  README.md
qt/HelloCppQt/: CMakeLists.txt  main.cpp
